card fix
